# it_is_a_dungeon

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
assets/: README.md
src/: audio.rs  console.rs  gui.rs  main.rs  map.rs  player.rs  random_table.rs  rect.rs  saveload.rs  spawner.rs
src/components/: helpers.rs  intent.rs  mod.rs
src/systems/: damage_system.rs  hunger_system.rs  inventory_system.rs  map_indexing_system.rs  melee_combat_system.rs  mod.rs  monster_ai_system.rs  music_system.rs  particle_system.rs  saveload_system.rs  trigger_system.rs  visibility_system.rs
static/: index.html  style.css
