[package]
name = "roguelike_tutorial"
version = "0.1.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bracket-lib = { git = "https://github.com/amethyst/bracket-lib", version = "0.8.2", features = ["serde"] } #, default-features = false, features = ["amethyst_engine_vulkan"] }
thiserror = "1.0"
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = { version = "0.4.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window"] }