[package]
name = "it_is_a_dungeon"
version = "0.1.0"
authors = ["Gustaf Lindstedt <gustaflindstedt@protonmail.com>"]
edition = "2018"
license = "MIT"
# This option requires nightly
# https://github.com/rust-lang/cargo/issues/2524
# https://github.com/rust-lang/cargo/issues/7914
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bracket-lib = { git = "https://github.com/amethyst/bracket-lib", version = "0.8.2", features = ["serde"] } #, default-features = false, features = ["amethyst_engine_vulkan"] }
kira = { git = "https://github.com/tesselode/kira", branch = "main", version = "0.4", default-features = false, features = ["ogg", "wav"] }
ringbuf = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
specs = { version = "0.16.1", features = ["serde", "specs-derive"] }


[target.wasm32-unknown-unknown.dependencies]
# disable parallel feature on wasm
js-sys = "0.3"
specs = { version = "0.16.1", default-features = false, features = ["serde", "specs-derive"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AudioContext",
    "AudioBuffer",
    "Headers",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Storage",
    "Window"
] }
